--- a/package.json
+++ b/package.json
@@ -17,7 +17,15 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migrate:up": "npx sequelize-cli db:migrate",
+    "migrate:undo": "npx sequelize-cli db:migrate:undo",
+    "migrate:undo:all": "npx sequelize-cli db:migrate:undo:all",
+    "migration:create": "npx sequelize-cli migration:create --underscored --name",
+    "seeder:create": "npx sequelize-cli seed:generate --name",
+    "seeder:up": "npx sequelize-cli db:seed:all",
+    "db:reset:full": "npx sequelize-cli db:drop && npx sequelize-cli db:create && yarn migrate:up && yarn seeder:up",
+    "setup:db": "yarn migrate:up && yarn seeder:up"
   },
   "dependencies": {
     "@nestjs/cli": "^10.1.17",
