--- a/package.json
+++ b/package.json
@@ -32,9 +32,17 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.1.1",
+    "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/sequelize": "^10.0.0",
+    "argon2": "^0.31.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "deep-email-validator": "^0.1.21",
     "dotenv": "^16.3.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "pino": "^8.15.1",
@@ -50,6 +58,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^3.0.9",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
